tests/neg/i10901.check
-- [E008] Not Found Error: tests/neg/i10901.scala:62:16 ----------------------------------------------------------------
62 |  val y = "abc".foo  // error
   |          ^^^^^^^^^
   |          value foo is not a member of String.
   |          An extension method was tried, but could not be fully constructed:
   |
   |              Test.foo("abc")(/* missing */summon[C])
   |
   |              failed with:
   |
   |                  No given instance of type C was found for parameter x$2 of method foo in object Test
